--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,86 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+}
+
+    .form-group{
+      width: 100%;
+  }
+    
+    .col-3{
+        width: 25%;
+    }
+    .col-6{
+        width: 50%;
+    }
+    .col-8{
+        width: 75%;
+    }
+    .col-12{
+        width: 100%;
+    }
+    
+    
+      input[type=text], select, textarea {
+        width: 100%;
+        padding: 5px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        resize: vertical;
+      }
+      
+      label {
+        padding: 12px 8px 8px 20px;
+        display: inline-block;
+      }
+      
+      /* input[type=submit] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        float: right;
+      }
+      
+      input[type=submit]:hover {
+        background-color: #45a049;
+      } */
+      
+      .col-25 {
+        float: left;
+        width: 20%;
+        margin-top: 6px;
+      }
+      
+      .col-75 {
+        float: left;
+        width: 75%;
+        margin-top: 6px;
+      }
+      .col-50{
+        float: left;
+        width: 50%;
+        margin-top: 6px;
+      }
+      .row{
+        width: 100%;
+      }
+      
+      /* Clear floats after the columns */
+      .form-group:after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+      
+      /* Responsive layout */
+      @media screen and (max-width: 600px) {
+        .col-25, .col-75, input[type=submit] {
+          width: 100%;
+          margin-top: 0;
+        }
+      }
